fix: added spacing b/w el in about us page

--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -82,7 +82,7 @@
     align-items: center;
     justify-content: space-around;
     align-items: center;
-    gap: 5rem;
+    gap: 20rem;
 
     img {
         max-height: 150px;
